--- a/aframe/examples/model.html
+++ b/aframe/examples/model.html
@@ -7,7 +7,7 @@
         <!-- <a-box position='0 0.5 0' material='opacity: 0.5;'></a-box> -->
 
         <!-- Adding an OBJ file to an AR Project-->
-        <a-entity obj-model="obj: url(assets/model.obj); mtl: url(assets/materials.mtl)"> </a-entity>
+        <a-entity position="0 0 0" obj-model="obj: url(assets/model.obj); mtl: url(assets/materials.mtl)"> </a-entity>
         <a-marker-camera preset='hiro'>
         </a-marker-camera>
     </a-scene>
