--- a/aframe/examples/model.html
+++ b/aframe/examples/model.html
@@ -8,7 +8,8 @@
 
         <!-- Adding an OBJ file to an AR Project-->
         <a-entity position="0 3 0" rotation="0 0 0"
-            obj-model="obj: url(assets/model.obj); mtl: url(assets/materials.mtl)"> </a-entity>
+            obj-model="obj: url(assets/Christmas_Tree_Editble_OK); mtl: url(assets/Christmas_Tree_Editble_OK.mtl)">
+        </a-entity>
         <a-marker-camera preset='hiro'>
         </a-marker-camera>
     </a-scene>
