--- a/aframe/examples/model.html
+++ b/aframe/examples/model.html
@@ -8,7 +8,7 @@
 
         <!-- Adding an OBJ file to an AR Project-->
         <a-entity position="0 0 0" rotation="0 0 0"
-            obj-model="obj: url(assets/model1.obj); mtl: url(assets/materials1.mtl)"> </a-entity>
+            obj-model="obj: url(assets/OpelAstra.obj); mtl: url(assets/OpelAstra.mtl)"> </a-entity>
         <a-marker-camera preset='hiro'>
         </a-marker-camera>
     </a-scene>
