--- a/aframe/examples/model.html
+++ b/aframe/examples/model.html
@@ -7,11 +7,13 @@
         <!-- <a-box position='0 0.5 0' material='opacity: 0.5;'></a-box> -->
 
         <!-- Adding an OBJ file to an AR Project-->
-        <!-- <a-entity position="0 0 0" rotation="0 0 0"
-            obj-model="obj: url(assets/01Alocasia_obj.obj); mtl: url(assets/01Alocasia_obj.mtl)"> </a-entity> -->
+        <a-entity position="0 0 0" rotation="0 0 0"
+            obj-model="obj: url(assets/model0.obj); mtl: url(assets/model0.mtl)"> </a-entity>
 
-        <a-entity gltf-model=”url(assets/gift.dae)”> </a-entity> <a-marker-camera preset='hiro'>
-            </a-marker-camera>
+        <!-- <a-entity gltf-model=”url(assets/gift.dae)”> </a-entity>  -->
+
+        <a-marker-camera preset='hiro'>
+        </a-marker-camera>
     </a-scene>
 
 
