--- a/aframe/examples/model.html
+++ b/aframe/examples/model.html
@@ -8,10 +8,7 @@
 
         <!-- Adding an OBJ file to an AR Project-->
         <a-entity position="0 0 0" rotation="0 0 0"
-            obj-model="obj: url(assets/model0.obj); mtl: url(assets/model0.mtl)"> </a-entity>
-
-        <!-- <a-entity gltf-model=”url(assets/gift.dae)”> </a-entity>  -->
-
+            obj-model="obj: url(assets/model0.obj); mtl: url(assets/materials0.mtl)"> </a-entity>
         <a-marker-camera preset='hiro'>
         </a-marker-camera>
     </a-scene>
