--- a/aframe/examples/model.html
+++ b/aframe/examples/model.html
@@ -1,17 +1,13 @@
-<!-- Augmented Reality on the Web in 10 lines of html! https://github.com/jeromeetienne/ar.js -->
-<script src="https://aframe.io/releases/0.9.0/aframe.min.js"></script>
-<script src="../build/aframe-ar.min.js"></script>
+<script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
+<script src="https://rawgit.com/donmccurdy/aframe-extras/master/dist/aframe-extras.loaders.min.js"></script>
+<script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
 
 <body style='margin : 0px; overflow: hidden;'>
     <a-scene embedded arjs='sourceType: webcam;'>
-        <!-- <a-box position='0 0.5 0' material='opacity: 0.5;'></a-box> -->
 
-        <!-- Adding an OBJ file to an AR Project-->
-        <a-entity position="0 0 0" rotation="0 0 0"
-            obj-model="obj: url(assets/model0.obj); mtl: url(assets/materials0.mtl)"> </a-entity>
-        <a-marker-camera preset='hiro'>
-        </a-marker-camera>
+        <a-marker preset='hiro'>
+            <!--Adding a glTF 2.0 model to your scene-->
+            <a-entity collada-model=”url(/path/to/nameOfFile.dae)”> </a-entity> </a-marker> <a-entity camera></a-entity>
     </a-scene>
-
-
 </body>
+view raw
