--- a/aframe/examples/model.html
+++ b/aframe/examples/model.html
@@ -7,7 +7,9 @@
 
         <a-marker preset='hiro'>
             <!--Adding a glTF 2.0 model to your scene-->
-            <a-entity collada-model=”url(/path/to/nameOfFile.dae)”> </a-entity> </a-marker> <a-entity camera></a-entity>
+            <a-entity collada-model="url(/aframe/examples/assets/gift.dae)"> </a-entity>
+        </a-marker>
+        <a-entity camera></a-entity>
     </a-scene>
 </body>
 view raw
