--- a/aframe/examples/model.html
+++ b/aframe/examples/model.html
@@ -1,15 +1,35 @@
-<script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
-<script src="https://rawgit.com/donmccurdy/aframe-extras/master/dist/aframe-extras.loaders.min.js"></script>
-<script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
+<!DOCTYPE html>
+<!-- include aframe -->
+<script src="/aframe/build/aframe.min.js"></script>
+<!-- include ar.js -->
+<script src="/aframe/build/aframe-ar.js"></script>
 
-<body style='margin : 0px; overflow: hidden;'>
-    <a-scene embedded arjs='sourceType: webcam;'>
+<!-- to load .ply model -->
+<script src="https://rawgit.com/donmccurdy/aframe-extras/v2.1.1/dist/aframe-extras.loaders.min.js"></script>
 
-        <a-marker preset='hiro'>
-            <!--Adding a glTF 2.0 model to your scene-->
-            <a-entity collada-model="url(/aframe/examples/assets/gift.dae)"> </a-entity>
-        </a-marker>
-        <a-entity camera></a-entity>
+<body style='margin : 0px; overflow: hidden; font-family: Monospace;'>
+    <div style='position: fixed; top: 10px; width:100%; text-align: center; z-index: 1;'>
+        <a href="https://github.com/jeromeetienne/AR.js/" target="_blank">AR.js</a> - Model of A-Frame logo in augmented
+        reality
+        <br />
+        Contact me any time at <a href='https://twitter.com/jerome_etienne' target='_blank'>@jerome_etienne</a>
+    </div>
+    <!-- <a-scene embedded arjs='sourceType: video; sourceUrl:../../data/videos/headtracking.mp4;'> -->
+    <a-scene embedded arjs='sourceType: webcam'>
+
+        <!-- <a-scene embedded arjs='sourceType: webcam; sourceWidth: 240; sourceHeight: 180;'> -->
+        <!-- <a-scene arjs='sourceType: image; sourceUrl:../../data/images/screenshot.png'> -->
+        <!-- <a-scene embedded arjs='sourceType: image; sourceUrl:../../data/images/armchair.jpg;'> -->
+
+        <a-assets>
+            <a-asset-item id="assetAframe" src="models/ply/aframe.ply"></a-asset-item>
+        </a-assets>
+
+        <!-- <a-marker type='unknown'> -->
+        <a-entity ply-model="src: #assetAframe" rotation='-90 0 0' scale='0.02 0.02 0.02'></a-entity>
+
+        <a-marker-camera preset='hiro'></a-marker-camera>
     </a-scene>
 </body>
-view raw
+
+</html>
