fix assets ofr aframe.ply

--- a/aframe/examples/model.html
+++ b/aframe/examples/model.html
@@ -22,7 +22,7 @@
         <!-- <a-scene embedded arjs='sourceType: image; sourceUrl:../../data/images/armchair.jpg;'> -->
 
         <a-assets>
-            <a-asset-item id="assetAframe" src="models/ply/aframe.ply"></a-asset-item>
+            <a-asset-item id="assetAframe" src="assets/ply/aframe.ply"></a-asset-item>
         </a-assets>
 
         <!-- <a-marker type='unknown'> -->
