--- a/aframe/demos/demo-aframe-logo/test.html
+++ b/aframe/demos/demo-aframe-logo/test.html
@@ -9,10 +9,7 @@
 
 <body style='margin : 0px; overflow: hidden; font-family: Monospace;'>
     <div style='position: fixed; top: 10px; width:100%; text-align: center; z-index: 1;'>
-        <a href="https://github.com/jeromeetienne/AR.js/" target="_blank">AR.js</a> - Model of A-Frame logo in augmented
-        reality
-        <br />
-        Contact me any time at <a href='https://twitter.com/jerome_etienne' target='_blank'>@jerome_etienne</a>
+        Test
     </div>
     <!-- <a-scene embedded arjs='sourceType: video; sourceUrl:../../data/videos/headtracking.mp4;'> -->
     <a-scene embedded arjs='sourceType: webcam'>
