https://s3.eu-central-1.amazonaws.com/storage.rownarts.com/ar/tree.gltf

--- a/aframe/demos/tema/tree.html
+++ b/aframe/demos/tema/tree.html
@@ -14,7 +14,8 @@
         arjs="sourceType: webcam; debugUIEnabled: false; detectionMode: mono_and_matrix; matrixCodeType: 3x3;">
 
         <a-assets>
-            <a-asset-item id="animated-asset" src="models/tree.gltf">
+            <a-asset-item id="animated-asset"
+                src="https://s3.eu-central-1.amazonaws.com/storage.rownarts.com/ar/tree.gltf">
             </a-asset-item>
         </a-assets>
 
