--- a/aframe/demos/tema/tree.html
+++ b/aframe/demos/tema/tree.html
@@ -4,9 +4,11 @@
 <head>
     <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 </head>
+
 <script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
-<script src="https://raw.githack.com/jeromeetienne/AR.js/master/aframe/build/aframe-ar.min.js"></script>
-<script src="https://raw.githack.com/donmccurdy/aframe-extras/master/dist/aframe-extras.loaders.min.js"></script>
+<script src="assets/aframe-ar.min.js"></script>
+
+<script src="assets/aframe-extras.loaders.min.js"></script>
 
 <body style='margin : 0px; overflow: hidden;'>
     <!-- we add detectionMode and matrixCodeType to tell AR.js to recognize barcode markers -->
@@ -14,8 +16,7 @@
         arjs="sourceType: webcam; debugUIEnabled: false; detectionMode: mono_and_matrix; matrixCodeType: 3x3;">
 
         <a-assets>
-            <a-asset-item id="animated-asset"
-                src="https://s3.eu-central-1.amazonaws.com/storage.rownarts.com/ar/tree.gltf">
+            <a-asset-item id="animated-asset" src="models/tree.gltf">
             </a-asset-item>
         </a-assets>
 
