--- a/aframe/demos/tema/tree.html
+++ b/aframe/demos/tema/tree.html
@@ -16,7 +16,7 @@
         arjs="sourceType: webcam; debugUIEnabled: false; detectionMode: mono_and_matrix; matrixCodeType: 3x3;">
 
         <a-assets>
-            <a-asset-item id="animated-asset" src="models/tree.gltf">
+            <a-asset-item id="animated-asset" src="models/tree.glb">
             </a-asset-item>
         </a-assets>
 
