--- a/aframe/demos/tema/tree.html
+++ b/aframe/demos/tema/tree.html
@@ -16,7 +16,7 @@
         arjs="sourceType: webcam; debugUIEnabled: false; detectionMode: mono_and_matrix; matrixCodeType: 3x3;">
 
         <a-assets>
-            <a-asset-item scale="0.02 0.02 0.02" id="animated-asset" src="models/tree.glb">
+            <a-asset-item id="animated-asset" src="models/tree.glb">
             </a-asset-item>
         </a-assets>
 
@@ -25,7 +25,7 @@
         </a-marker>
 
         <a-marker id="animated-marker" type='barcode' value='6'>
-            <a-entity animation-mixer gltf-model="#animated-asset" scale="2 2 2">
+            <a-entity animation-mixer gltf-model="#animated-asset" scale="0.2 0.2 0.2">
             </a-entity>
         </a-marker>
 
